--- a/.github/workflows/actions_rom.yml
+++ b/.github/workflows/actions_rom.yml
@@ -124,7 +124,7 @@ jobs:
         sudo tar -xzvf MacOSX10.11.sdk.tar.xz -C /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs
         gsed -i '/cc_binary_host/,+13 d' ${{ steps.pwd.outputs.pwd }}/external/v8/Android.bp
         gsed -i '/name: "v8_torque"/,+36 d' ${{ steps.pwd.outputs.pwd }}/external/v8/Android.bp
-        gsed -i sed 's/sed/gsed/g' ${{ steps.pwd.outputs.pwd }}/build/envsetup.sh
+        gsed -i 's/sed/gsed/g' ${{ steps.pwd.outputs.pwd }}/build/envsetup.sh
       continue-on-error: true
         
     - name: Start Building
