--- a/.github/workflows/actions_rom.yml
+++ b/.github/workflows/actions_rom.yml
@@ -19,7 +19,8 @@ jobs:
     - name: Prepare the environment
       run: |
         df -h
-        brew install repo gnupg make Imagemagick sdl2 gnu-sed
+        brew install repo gnupg make Imagemagick sdl2
+        brew install brew install gnu-sed --with-default-names
         hdiutil create -type SPARSE -fs 'Case-sensitive Journaled HFS+' -size 160g ~/android.dmg
         hdiutil attach ~/android.dmg.sparseimage -mountpoint /Volumes/android
         echo "ulimit -S -n 1024" > ~/.bash_profile
@@ -124,7 +125,6 @@ jobs:
         sudo tar -xzvf MacOSX10.11.sdk.tar.xz -C /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs
         gsed -i '/cc_binary_host/,+13 d' ${{ steps.pwd.outputs.pwd }}/external/v8/Android.bp
         gsed -i '/name: "v8_torque"/,+36 d' ${{ steps.pwd.outputs.pwd }}/external/v8/Android.bp
-        gsed -i 's/sed/gsed/g' ${{ steps.pwd.outputs.pwd }}/build/envsetup.sh
       continue-on-error: true
         
     - name: Start Building
