--- a/.github/workflows/actions_rom.yml
+++ b/.github/workflows/actions_rom.yml
@@ -124,12 +124,12 @@ jobs:
         sudo tar -xzvf MacOSX10.11.sdk.tar.xz -C /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs
         gsed -i '/cc_binary_host/,+13 d' ${{ steps.pwd.outputs.pwd }}/external/v8/Android.bp
         gsed -i '/name: "v8_torque"/,+36 d' ${{ steps.pwd.outputs.pwd }}/external/v8/Android.bp
+        gsed -i 's/sed/gsed/g' ${{ steps.pwd.outputs.pwd }}/build/envsetup.sh
       continue-on-error: true
         
     - name: Start Building
       run: |
         export TERM=xterm
-        alias sed=gsed
         echo -e "\n" | source build/envsetup.sh
         ${{ steps.var.outputs.build_platform }} ${{ steps.var.outputs.rom_name }}_${{ steps.var.outputs.device_name }}-${{ steps.var.outputs.build_type }} 
         ${{ steps.var.outputs.build_method }} ${{ steps.var.outputs.build_name }} -j$(sysctl -n hw.ncpu)
