--- a/.github/workflows/actions_rom.yml
+++ b/.github/workflows/actions_rom.yml
@@ -130,9 +130,11 @@ jobs:
       run: |
         export TERM=xterm
         source build/envsetup.sh
-        1
-        1
-        1
+        echo 1
+        echo 1
+        echo 1
+        echo 1
+        echo 1
         ${{ steps.var.outputs.build_platform }} ${{ steps.var.outputs.rom_name }}_${{ steps.var.outputs.device_name }}-${{ steps.var.outputs.build_type }} 
         ${{ steps.var.outputs.build_method }} ${{ steps.var.outputs.build_name }} -j$(sysctl -n hw.ncpu)
       working-directory: ${{ steps.pwd.outputs.pwd }}
